Thu Jun 24 21:21:57 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/GroupRakeData.h:

          Fixed a GCC warning by making sure ACE pre-processor macros are
          defined before use.

        * dds/DCPS/Comparator_T.h:
        * dds/DCPS/Definitions.h:
        * dds/InfoRepo/DCPS_Utils.cpp
        * tests/DCPS/FooTest4/main.cpp:
        * tests/DCPS/GroupPresentation/SubscriberListener.cpp:
        * tests/DCPS/Presentation/main.cpp:
        * tests/DCPS/UnitTests/LivelinessCompatibility.cpp:

          More GCC 3.3.x work-arounds.

        * dds/idl/be_produce.cpp:

          Use main_filename() instead of filename() since some pre-processors
          use a temporary filename (SunCC).

        * examples/DCPS/Messenger_IOGR_Imr/Messenger_IOGR_Imr.mpc:

          Make sure we get rules.dds.GNU included in the makefile.

        * tests/DCPS/ViewState/ViewState.mpc:
        * tests/DCPS/ZeroCopyRead/ZeroCopyRead.mpc:

          Simplified mpc files: no need to list a "Source_Files" section.

Wed Jun 23 21:44:45 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Comparator_T.h:
        * dds/DCPS/Definitions.h:
        * dds/DCPS/FilterEvaluator.cpp:
        * dds/DCPS/yard/yard_base_grammar.hpp:
        * dds/DCPS/yard/yard_text_grammar.hpp:
        * dds/InfoRepo/DCPS_IR_Topic.cpp:
        * dds/InfoRepo/DCPS_Utils.cpp:
        * dds/idl/keys_generator.cpp:
        * tests/DCPS/FilterExpression/FilterExpression.cpp:

          Work-arounds for bugs in GCC 3.3.x.  See comment in Definitions.h.

Wed Jun 23 18:18:52 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/SharedTransport/TestCase.cpp:

          Added 2 seconds delay before writing samples for test with udp
          transport as the udp does not do fully association establishment
          between pub and sub.

Wed Jun 23 18:12:37 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/SharedTransport/TestCase.cpp:
