@@ -1,3 +1,15 @@
+Fri Jun 25 18:36:19 UTC 2010  Yan Dai  <dai_y@ociweb.com>
+
+        * bin/dcps_tests.lst:
+
+          Marked the Ownership update_strength test only run
+          when built in topic is enabled.
+          
+        * dds/DCPS/OwnershipManager.cpp:
+
+          Fixed a memory corruption due to a possibility to
+          erase vector end.
+          
 Thu Jun 24 21:21:57 UTC 2010  Adam Mitz  <mitza@ociweb.com>
 
         * dds/DCPS/GroupRakeData.h:
